@@ -1,5 +1,3 @@
-/* OPENBSD ORIGINAL: lib/libc/gen/dirname.c */
-
 /*      $OpenBSD: dirname.c,v 1.10 2003/06/17 21:56:23 millert Exp $    */
 
 /*
@@ -17,6 +15,8 @@
  * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
+
+/* OPENBSD ORIGINAL: lib/libc/gen/dirname.c */
 
 #include "includes.h"
 #ifndef HAVE_DIRNAME
