@@ -1,5 +1,3 @@
-/* OPENBSD ORIGINAL: lib/libc/string/strsep.c */
-
 /*	$OpenBSD: strsep.c,v 1.5 2003/06/11 21:08:16 deraadt Exp $	*/
 
 /*-
@@ -30,6 +28,8 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  */
+
+/* OPENBSD ORIGINAL: lib/libc/string/strsep.c */
 
 #include "includes.h"
 
