@@ -1,5 +1,3 @@
-/* OPENBSD ORIGINAL: sys/sys/queue.h */
-
 /*	$OpenBSD: queue.h,v 1.25 2004/04/08 16:08:21 henning Exp $	*/
 /*	$NetBSD: queue.h,v 1.11 1996/05/16 05:17:14 mycroft Exp $	*/
 
@@ -33,6 +31,8 @@
  *
  *	@(#)queue.h	8.5 (Berkeley) 8/20/94
  */
+
+/* OPENBSD ORIGINAL: sys/sys/queue.h */
 
 #ifndef	_FAKE_QUEUE_H_
 #define	_FAKE_QUEUE_H_
